# CrabVoice

./: .gitignore  buffer_test.py  cut_fft_test.py  expr_test.py  faster-whisper-mic.py  mic_test.py  pyproject.toml  setenv.sh  split_audio_vad.py  split_audio_vad.py.0313  stt_test.py  transcribe_simple.py  vad_split.py  vad_test.py  voice_utils.py  wave_cut_test.py  wavestream.py
CrabAI/: vmp.py
CrabAI/chatbot/: chatbot.py
CrabAI/tools/: JsonStreamParser.py  __init__.py  prompt_factory.py
CrabAI/voice/: VoiceTalkEngine.py  __init__.py  proc_voice_talk_engine.py  stt.py  translate.py  tts.py  voice_state.py  voice_talk_engine.py  voice_utils.py
CrabAI/voice/_stt/: audio_to_segment.py  audio_to_segment_silero_vad.py  audio_to_segment_webrtcvad.py  audio_to_text.py  audio_to_voice.py  hists.py  low_pos.py  mic_to_audio.py  proc_audio_to_segment.py  proc_segment_to_voice.py  proc_source.py  proc_source_to_audio.py  proc_stt_engine.py  proc_voice_to_text.py  recognizer_google.py  recognizer_vosk.py  ring_buffer.py  rolling_max_buffer.py  silero_vad.py  stt_data.py  vad_counter.py  wave_to_audio.py
CrabAI/voice/_tts/: TtsEngine.py
test/: mml_test.py  pf_test.py  proc_test.py  proc_test_gui.py  prompt_factory.py  pygame_fadein_test.py  stt_data_plot.py  stt_test_gui.py  stt_viewer.py  test_tts.py  test_voicetalkengine.py  unittest_ring_buffer.py  unittest_stt_data.py  vosk_grammer_test.py
