[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["CrabAI"]  # プロジェクトディレクトリに応じて変更

[project]
name = "crab-voice"
version = "0.0.1"
authors = [  { name="route250" },]
description = "local interpreter service"
license = {text = "MIT License"}
requires-python = ">=3.11.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "License :: OSI Approved :: MIT License",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.11",
    "Operating System :: OS Independent",
    ]
dependencies = [
    "python-dotenv", "numpy",
    "sounddevice","pygame",
    "librosa", "scipy", "scikit-learn",
    "SpeechRecognition", "gTTS", "vosk"
    ]
